--- a/index.html
+++ b/index.html
@@ -99,6 +99,49 @@
       .author-info a {
         text-decoration: none;
       }
+      
+      @media (max-width: 1350px) {
+        .content {
+          height: 100vh;
+          padding: 20px;
+        }
+        .registro {
+          width: 100%;
+          height: auto;
+        }
+        .registro input,
+        .registro button {
+          width: 100%;
+          margin-top: 10px;
+        }
+        .conten h1 {
+          font-size: 24px;
+        }
+        .content p {
+          width: 100%;
+          font-size: 16px;
+          margin: 10px auto;
+        }
+
+      }
+      @media (max-width: 1024px) {
+        .conten h1 {
+          font-size: 20px;
+        }
+        .content p {
+          width: 100%;
+          font-size: 14px;            margin: 10px auto;
+          }
+        }
+      @media (max-width: 412px) {
+        .conten h1 {
+          font-size: 18px;
+        }
+        .content p {
+          width: 100%;
+          font-size: 12px;            margin: 10px auto;
+        }
+      }
     </style>
   </head>
   <body>
