correccion de proyecto

--- a/index.html
+++ b/index.html
@@ -100,24 +100,33 @@
       .author-info a {
         text-decoration: none;
       }
-      
+        @media (max-width: 1350px) {
+        .content {
+          width: 90%;
+        }
+        .registro {
+          width: 400px;
+          height: 180px;
+        }
+      }
       
       @media (max-width: 1024px) {
-        .conten h1 {
-          font-size: 20px;
+        .content {
+          width: 90%;
         }
-        .content p {
-          width: 100%;
-          font-size: 14px;            margin: 10px auto;
-          }
+        .registro {
+          width: 400px;
+          height: 180px;
         }
+      }
       @media (max-width: 412px) {
-        .conten h1 {
-          font-size: 18px;
+        .content {
+          width: 90%;
         }
-        .content p {
-          width: 100%;
-          font-size: 12px;            margin: 10px auto;
+        }
+        .registro {
+          width: 400px;
+          height: 180px;
         }
       }
     </style>
